@@ -1,3 +1,8 @@
+2017-01-04  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/66735
+	* g++.dg/cpp1y/pr66735.C: New.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/71563
